// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toIncludeAnyMembers > fails when given array contains array value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toIncludeAnyMembers([22m[32mexpected[39m[2m)[22m

Expected list to not include any of the following members:
  [32mArray [
  Array [
    Object {
      \\"hello\\": \\"world\\",
    },
  ],
  7,
][39m
Received:
  [31mArray [
  Array [
    Object {
      \\"hello\\": \\"world\\",
    },
  ],
][39m"
`;

exports[`.not.toIncludeAnyMembers > fails when given array contains object value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toIncludeAnyMembers([22m[32mexpected[39m[2m)[22m

Expected list to not include any of the following members:
  [32mArray [
  Object {
    \\"foo\\": \\"bar\\",
  },
][39m
Received:
  [31mArray [
  Object {
    \\"foo\\": \\"bar\\",
  },
][39m"
`;

exports[`.not.toIncludeAnyMembers > fails when given object contains primitive value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toIncludeAnyMembers([22m[32mexpected[39m[2m)[22m

Expected list to not include any of the following members:
  [32mArray [
  7,
  8,
][39m
Received:
  [31mArray [
  7,
][39m"
`;

exports[`.toIncludeAnyMembers > fails when expected object does not contain array value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toIncludeAnyMembers([22m[32mexpected[39m[2m)[22m

Expected list to include any of the following members:
  [32m\\"world\\"[39m
Received:
  [31mArray [
  1,
  2,
  3,
][39m"
`;

exports[`.toIncludeAnyMembers > fails when given array does not contain any members  1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toIncludeAnyMembers([22m[32mexpected[39m[2m)[22m

Expected list to include any of the following members:
  [32mArray [
  1,
  2,
  3,
][39m
Received:
  [31mArray [
  4,
  5,
  6,
][39m"
`;

exports[`.toIncludeAnyMembers > fails when given object is not an array 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toIncludeAnyMembers([22m[32mexpected[39m[2m)[22m

Expected list to include any of the following members:
  [32mArray [
  1,
  2,
  3,
][39m
Received:
  [31m7[39m"
`;
